packages/concerto-cto/test/cto/bad/self-extending-participant.bad.cto
namespace com.acme@1.0.0

participant Self_Extending extends Self_Extending {
  o String foo optional
}
